Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17810

Logspam occurs when pressing F2 on freeldr.ini but does not happen when pressing F2 on boosect.old

    XMLWordPrintable

Details

    • stone age SVN

    Description

      Reproduction steps

      • open explorer filebrowser and press F2 to rename on the following files

      Logspam occurs when pressing F2 on freeldr.ini
      but does not happen when pressing F2 on boosect.old

      Freeldr.ini causes a huge logspam-block like:

      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app accwiz.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app artgalry.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app awdvstub.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app cag.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app cchat.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app cdfview.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app clipbrd.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app cmmgr32.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app cryptext.dll
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app datainst.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app depends.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app drwatson.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app dsquery.dll
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app explorer.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app faxcover.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app finder.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app fontview.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app fpidcwiz.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app graflink.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app grpconv.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app helpctr.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app hh.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app icwconn1.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app inetcpl.cpl
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app inoculan.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app isignup.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app kodakprv.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app mmc.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app mnyimprt.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app mobsync.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app msconf.dll
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app msdxm.ocx
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app mshta.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app msiexec.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app msimn.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app msinfo32.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app msrating.dll
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app navwnt.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app netshell.dll
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app ntbackup.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app oledb32.dll
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app orgchart.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app osa.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app outlook.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app perfmon.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app rasphone.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app realmon.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app regedit.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app rnaui.dll
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app shdocvw.dll
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app shell32.dll
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app shscrap.dll
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app snapview.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app sndvol32.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app themes.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app ttxmpc97.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app url.dll
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app wab.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app wb32.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app winhlp32.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app wltmime.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app wpnpinst.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app wscript.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app xpsviewer.exe
      err:(dll/win32/shell32/COpenWithMenu.cpp:138) Failed to add app zipfldr.dll
      

      It happens reproducibly to me in 0.4.14-RC-103-g79cb118
      and it does also happen reproducibly for me in 0.4.14-RC-104-g8632c99 + PR4020, which means it is not related to katayama_hirofumi_mz latest fixes for the smartass-renaming
      0.4.14-RC-103-g79cb118_affected.log

      Attachments

        1. 0.4.14-RC-103-g79cb118_affected.log
          39 kB
        2. CDefView_cpp_01.patch
          0.8 kB
        3. CDefView_cpp_02.patch
          1 kB
        4. log-spam-fix.patch
          0.6 kB
        5. OpenWithIsNecessary.png
          OpenWithIsNecessary.png
          28 kB
        6. screenshot-1.png
          screenshot-1.png
          11 kB

        Issue Links

          Activity

            People

              DougLyons DougLyons
              reactosfanboy reactosfanboy
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: