[SHELL32] Bypass OpenWith for Delete and F2 (Rename) Keys (#4032) CORE-17810

Logspam started during 0.4.9-dev'ing when zipfldr got committed, logspam became much worse by
0.4.10-dev-599-g 932df378bf35146a56c796bec36c5c689109fbd6
But the actual bug of 'calling those functions when not needed' is much older than that.

I do intend to port this improvement back into older rls-branches.